<resources>
    <string name="app_name">Statistik COVID-19 Indonesia</string>
    <string name="main_textview">Kelompok Banteng Merah</string>
    <string name="sub_textview">Anggota</string>
    <string name="subtext_splash">DIDUKUNG OLEH SATGAS COVID-19</string>
    <string name="homepage_header_text">Update Harian Satgas Indonesia</string>
    <string name="splash_screen_description">Splash Screen</string>
    <string name="homepage_text_dirawat">TOTAL KASUS DIRAWAT</string>
    <string name="homepage_text_sembuh">TOTAL KASUS SEMBUH</string>
    <string name="homepage_text_meninggal">TOTAL KASUS MENINGGAL</string>
    <string name="value_total_kasus">4.198.678</string>
    <string name="placeholder_card">Loading...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_label1">Top Stories</string>
    <string name="tab_label2">Tech News</string>
    <string name="tab_label3">Cooking</string>
    <string name="article_text"><font size="16"><b><i>COVID-19</i></b></font> adalah penyakit yang disebabkan oleh virus severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2).
                    COVID-19 dapat menyebabkan gangguan sistem pernapasan, mulai dari gejala yang ringan seperti flu, hingga infeksi paru-paru, seperti pneumonia.
                    \n\nKasus pertama penyakit ini terjadi di kota Wuhan, Cina, pada akhir Desember 2019. Setelah itu, COVID-19 menular antarmanusia dengan sangat cepat dan menyebar ke puluhan negara, termasuk Indonesia, hanya dalam beberapa bulan.
                    \n\n<font size="20"><u><b>Highlights :</b></u></font>
                    \n\n<font size="20"><b>Kebijakan Pemerintah Dalam Mencegah Penyebaran COVID-19 </b></font> \nPenyebarannya yang cepat membuat beberapa negara menerapkan kebijakan untuk memberlakukan lockdown untuk mencegah penyebaran virus Corona. Di Indonesia, pemerintah menerapkan kebijakan Pemberlakukan Pembatasan Kegiatan Masyarakat (PPKM) untuk menekan penyebaran virus ini.
                    \n\n<font size="20"><b>Peran Masyarakat Dalam Mencegah COVID-19 </b></font>\nDalam pandemi COVID-19 diharapkan masyarakat agar tetap menjaga kesehatan terlebih imunitas tubuh yang cukup dengan berolahraga dan mematuhi protokol kesehatan. Mengelola stres juga penting dilakukan. Pasalnya, stres berpengaruh terhadap imunitas tubuh. Apabila seseorang stres maka tubuh akan mengeluarkan hormon untuk meredakan stres. Namun, kondisi tersebut berefek menurunkan kekebalan tubuh. Oleh sebab itu, kami menghimbau masyarakat untuk tidak mudah stres menghadapai situasi yang tidak menentu ini ditengah pandemi COVID-19.
                    \n\n<font size="20"><b>Pentingnya Vaksin Dalam Mencegah COVID-19 </b></font>\nVaksinasi adalah pemberian vaksin (antigen) yang dapat merangsang pembentukan imunitas (antibodi) sistem imun di dalam tubuh. Vaksinasi sebagai upaya pencegahan primer yang sangat handal mencegah penyakit yang dapat dicegah dengan vaksinasi. Dengan prosedur vaksinasi yang benar diharapkan akan di peroleh kekebalan yang optimal, penyuntikan yang aman dan Kejadian Ikutan Pasca Imunisasi(KIPI) yang minimal.
</string>
    <string name="CTC_Header"><b>CTC</b>: <i>Corona Tracking Case</i></string>
    <string name="CTC_Description">CTC (Corona Tracking Case) merupakan aplikasi informasi perkembangan kasus dan pencegahan COVID-19 di Indonesia terutama daerah Provinsi.</string>
    <string name="CTC_Developed">App Developed by: <b>Banteng Merah</b></string>
</resources>