<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="25dp"
    tools:context=".FAQFragment"
    >

  <!-- TODO: Update blank fragment layout -->


  <ImageView
      android:id="@+id/Logo_Aplikasi"
      android:layout_width="200dp"
      android:layout_height="200dp"
      android:layout_marginTop="48dp"
      android:background="#00000000"
      android:src="@drawable/ic_launcher_foreground"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/CTC_Name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="32dp"
      android:text="@string/CTC_Header"
      android:textColor="@color/Biru"
      android:textSize="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/Logo_Aplikasi" />

  <TextView
      android:id="@+id/CTC_Description"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="16dp"
      android:text="@string/CTC_Description"
      android:textColor="@color/black"
      android:textSize="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/CTC_Name" />

  <TextView
      android:id="@+id/CTC_Update"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="30dp"
      android:text="Updated: 08/12/2021"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/CTC_Description" />

  <TextView
      android:id="@+id/CTC_Developed"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="64dp"
      android:text="@string/CTC_Developed"
      android:textColor="@color/BiruMuda"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/CTC_Update" />

</androidx.constraintlayout.widget.ConstraintLayout>