<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

<!--    <TextView-->
<!--        android:layout_marginTop="30dp"-->
<!--        android:id="@+id/Text_DataIndonesia"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="64dp"-->
<!--        android:text=""-->
<!--        android:textColor="@color/Biru"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    &lt;!&ndash;        app:layout_constraintTop_toBottomOf="@id/homepage_logo" &ndash;&gt;-->

<!--    <TextView-->
<!--        android:id="@+id/Text_DataProvinsi"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginEnd="64dp"-->
<!--        android:text=""-->
<!--        android:textColor="@color/Abu"-->
<!--        app:layout_constraintBaseline_toBaselineOf="@id/Text_DataIndonesia"-->
<!--        app:layout_constraintEnd_toEndOf="parent" />-->


    <ScrollView
        android:id="@+id/total_kasus_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp"
        android:fadingEdgeLength="2dp"
        android:fillViewport="true"
        android:requiresFadingEdge="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView4"
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:visibility="visible"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/Biru">

                    <TextView
                        android:id="@+id/Total_Kasus_CardPlaceholder"
                        style="@style/HeadCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:text="TOTAL POSITIF DI INDONESIA"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/Total_Kasus_NumberPlaceholder"
                        style="@style/TextCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/placeholder_card"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/Total_Kasus_CardPlaceholder" />

                    <ImageView
                        android:layout_width="175dp"
                        android:layout_height="175dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="-32dp"
                        android:adjustViewBounds="true"
                        android:alpha="0.5"
                        android:scaleType="centerInside"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/logo_layer1"
                        app:tint="@color/Abu" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:visibility="visible"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardView4"
                >


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/Biru">

                    <TextView
                        android:id="@+id/homepage_head_rawat"
                        style="@style/HeadCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:text="@string/homepage_text_dirawat"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/homepage_isi_rawat"
                        style="@style/TextCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/placeholder_card"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/homepage_head_rawat" />

                    <ImageView
                        android:layout_width="175dp"
                        android:layout_height="175dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="-32dp"
                        android:adjustViewBounds="true"
                        android:alpha="0.5"
                        android:scaleType="centerInside"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/logo_layer1"
                        app:tint="@color/Abu" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:visibility="visible"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardView">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/Biru">

                    <TextView
                        android:id="@+id/homepage_head_meninggal"
                        style="@style/HeadCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:text="@string/homepage_text_meninggal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/homepage_isi_meninggal"
                        style="@style/TextCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/placeholder_card"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/homepage_head_meninggal" />

                    <ImageView
                        android:layout_width="175dp"
                        android:layout_height="175dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="-32dp"
                        android:adjustViewBounds="true"
                        android:alpha="0.5"
                        android:scaleType="centerInside"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/logo_layer1"
                        app:tint="@color/Abu" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:visibility="visible"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardView2">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/Biru">

                    <TextView
                        android:id="@+id/homepage_head_negatif"
                        style="@style/HeadCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:text="@string/homepage_text_sembuh"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/homepage_isi_negatif"
                        style="@style/TextCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/placeholder_card"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/homepage_head_negatif" />

                    <ImageView
                        android:layout_width="175dp"
                        android:layout_height="175dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="-32dp"
                        android:adjustViewBounds="true"
                        android:alpha="0.5"
                        android:scaleType="centerInside"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/logo_layer1"
                        app:tint="@color/Abu" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>




            <TextView
                android:id="@+id/text_SATGAS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="82dp"
                android:layout_marginBottom="140dp"
                android:gravity="center_horizontal"
                android:text="© DATA DIDUKUNG SATGAS COVID-19"
                android:textColor="@color/Hijau"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardView3" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>